2013-07-09  Alan D. Salewski  <salewski@att.net>

	* configure.ac: set version to 0.1.2-snapshot for next dev cycle
	* NEWS: created empty news section for future 0.1.2 release


	RELEASED screen-wrappers 0.1.1

	* configure.ac: set version to 0.1.1 for release
	* NEWS: release date for screen-wrappers 0.1.1

	* src/main/bash/bin/screen-ls.in
	- replace (debugging) 'screen -q -ls' invocations with 'screen -ls'
	- correct detection of 'screen -ls' exit status (in $PIPESTATUS)
	- update docs

	* configure.ac: set version to 0.1.1-snapshot for next dev cycle
	* NEWS: created empty new section for future 0.1.1 release


	RELEASED screen-wrappers 0.1.0

	* configure.ac: set version to 0.1.0 for release
	* NEWS: release date for screen-wrappers 0.1.0

2013-07-08  Alan D. Salewski  <salewski@att.net>

	* bootstrap: new file

	* src/main/bash/bin/screen-ls.in: new file
	* src/main/bash/bin/Makefile.am: new file
	* src/main/bash/Makefile.am: new file
	* src/main/Makefile.am: new file
	* src/Makefile.am: new file
	* Makefile.am: new file

	* autotools/install-sh: new file
	* autotools/missing: new file

	* README: new file
	* NEWS: new file
	* INSTALL: new file
	* HACKING: new file
	* AUTHORS: new file
	* BUGS: new file
	* COPYING: new file
	* ChangeLog: new file